src/test/ui/resolve/issue-24968.stderr
error[E0411]: cannot find type `Self` in this scope
  --> $DIR/issue-24968.rs:1:11
   |
LL | fn foo(_: Self) {
   |           ^^^^ `Self` is only available in impls, traits, and type definitions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0411`.
